添加RxJava支持，obGet请求支持Observable返回

--- a/retrofitutilslibrary/build.gradle
+++ b/retrofitutilslibrary/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+    compile 'io.reactivex:rxjava:1.2.2'
+    compile 'io.reactivex:rxandroid:1.2.1'
 }
 
 /**避免Javadocs错误:找不到引用**/
