--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -25,6 +25,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    testCompile 'junit:junit:4.12'
     compile project(':retrofitutilslibrary')
+    compile 'com.excellence:basetools:1.1.0'
 }
