添加POST表单请求

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".DownloadActivity">
         </activity>
+        <activity android:name=".PostActivity"/>
     </application>
 
 </manifest>
