--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile project(':retrofit')
+    // compile 'com.excellence:retrofit:_latestVersion'
     compile 'com.excellence:basetools:1.2.4'
     compile 'com.excellence:permission:1.0.0'
 }
