--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile project(':retrofit')
     // compile 'com.excellence:retrofit:_latestVersion'
-    compile 'com.excellence:basetools:1.2.4'
-    compile 'com.excellence:permission:1.0.0'
+    compile 'com.excellence:basetools:1.2.5'
+    compile 'com.excellence:permission:1.0.1'
+    // 必须与Okhttp版本一致
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
 }
