--- a/retrofit/build.gradle
+++ b/retrofit/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.4.0'
     compile 'com.squareup.retrofit2:converter-gson:2.4.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-    compile 'io.reactivex:rxjava:1.3.8'
-    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.2.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
 
 /*********************上传jCenter依赖*********************/
