--- a/sample/application.gradle
+++ b/sample/application.gradle
@@ -1,33 +1,31 @@
+/*********************application通用配置*********************/
 def plugins = rootProject.ext.plugins
 def cfg = rootProject.ext.android
 def libs = rootProject.ext.dependencies
 
-apply plugin: plugins.library
+apply plugin: plugins.application
 
 android {
     compileSdkVersion cfg.compileSdkVersion
     buildToolsVersion cfg.buildToolsVersion
-
     defaultConfig {
+        // 必须重写
+        applicationId "com.excellence"
         minSdkVersion cfg.minSdkVersion
         targetSdkVersion cfg.targetSdkVersion
         versionCode cfg.versionCode
         versionName cfg.versionName
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    lintOptions {
-        abortOnError false
-    }
-
     dataBinding {
         enabled true
     }
@@ -38,13 +36,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
+    implementation libs["recyclerview-v7"]
+    implementation libs["androidx-appcompat"]
 
-    api libs["retrofit2"]
-    api libs["converter-scalars"]
-    api libs["converter-gson"]
-    api libs["adapter-rxjava2"]
-    api libs["rxjava2"]
-    api libs["rxandroid2"]
+    implementation libs["basetools"]
+    implementation libs["permission"]
 }
-
-apply from: 'bintray.gradle'
